--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3.3.0
-      with:
-        lfs: true
-        token: ${{ secrets.PAT }}
+      #with:
+        #lfs: true
+        #token: ${{ secrets.PAT }}
 
     - name: Publish app
       run: dotnet publish -c Release
